[package]
name = "wikidata-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rio_api = "0.7.1"
rio_turtle = "0.7.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
