[package]
name = "wikidata-filter"
version = "0.2.0"
edition = "2021"
description = "A tool to get the human-readable labels, descriptions, and wikidata IDs from a Wikidata dump"
license = "Apache-2.0"
repository = "https://github.com/alexkreidler/wikidata-filter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rio_api = "0.7.1"
rio_turtle = "0.7.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
clap = { version = "4.0", features = ["derive"] } 
serde-jsonlines = "0.4.0"
